--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,11 +9,11 @@
   </title>
 
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
-
+  <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
   <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Lora:400,400italic' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-  <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=PT+Mono&display=swap" rel="stylesheet">
 
   {% comment %} <link rel="stylesheet" href="{{"/assets/vendor/bootstrap/css/bootstrap.min.css" | relative_url }}"> {% endcomment %}
   <link rel="stylesheet" href="{{"/assets/vendor/bootstrap/css/bootstrap.css" | relative_url }}">
