Change Development Plan to Ideas; update navbar

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -14,7 +14,7 @@
           <a class="nav-link" href="{{ "/posts" | relative_url }}">Posts</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ "/development_plan" | relative_url }}">Development Plan</a>
+          <a class="nav-link" href="{{ "/ideas" | relative_url }}">Ideas</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{"/about" | relative_url }}">About</a>
