Add cheatsheet; amend navbar

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -16,6 +16,15 @@
         <li class="nav-item">
           <a class="nav-link" href="{{ "/ideas" | relative_url }}">Ideas</a>
         </li>
+        
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Resources
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="{{ "/sql-cheatsheet" | relative_url }}">SQL Cheatsheet</a>
+          </div>
+      </li>
         <li class="nav-item">
           <a class="nav-link" href="{{"/about" | relative_url }}">About</a>
         </li>
