Update navbar link and style; add Python & PostgreSQL cheatsheet

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -23,6 +23,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="{{ "/sql-cheatsheet" | relative_url }}">SQL Cheatsheet</a>
+            <a class="dropdown-item" href="{{ "/python_pgsql-cheatsheet" | relative_url }}">SQL Cheatsheet</a>
           </div>
       </li>
         <li class="nav-item">
