--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -22,8 +22,9 @@
             Resources
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="{{ "/sql-cheatsheet" | relative_url }}">SQL Cheatsheet</a>
-            <a class="dropdown-item" href="{{ "/python_pgsql-cheatsheet" | relative_url }}">PostgreSQL Cheatsheet</a>
+            <a class="dropdown-item" href="{{ "/cheatsheets/sql-cheatsheet" | relative_url }}">PostgreSQL Cheatsheet</a>
+            <a class="dropdown-item" href="{{ "/cheatsheets/python_pgsql-cheatsheet" | relative_url }}">Python x PostgreSQL Cheatsheet</a>
+            <a class="dropdown-item" href="{{ "/cheatsheets/docker-cheatsheet" | relative_url }}">Docker Cheatsheet</a>
           </div>
       </li>
         <li class="nav-item">
