--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -25,7 +25,8 @@
             <a class="dropdown-item" href="{{ "/cheatsheets/sql-cheatsheet" | relative_url }}">PostgreSQL Cheatsheet</a>
             <a class="dropdown-item" href="{{ "/cheatsheets/python_pgsql-cheatsheet" | relative_url }}">Python x PostgreSQL Cheatsheet</a>
             <a class="dropdown-item" href="{{ "/cheatsheets/docker-cheatsheet" | relative_url }}">Docker Cheatsheet</a>
-          </div>
+            <a class="dropdown-item" href="{{ "/cheatsheets/skimage-cheatsheet" | relative_url }}">Scikit-Image Cheatsheet</a>
+          </div>skimage-cheatsheet
       </li>
         <li class="nav-item">
           <a class="nav-link" href="{{"/about" | relative_url }}">About</a>
