--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -26,7 +26,7 @@
             <a class="dropdown-item" href="{{ "/cheatsheets/python_pgsql-cheatsheet" | relative_url }}">Python x PostgreSQL Cheatsheet</a>
             <a class="dropdown-item" href="{{ "/cheatsheets/docker-cheatsheet" | relative_url }}">Docker Cheatsheet</a>
             <a class="dropdown-item" href="{{ "/cheatsheets/skimage-cheatsheet" | relative_url }}">Scikit-Image Cheatsheet</a>
-          </div>skimage-cheatsheet
+          </div>
       </li>
         <li class="nav-item">
           <a class="nav-link" href="{{"/about" | relative_url }}">About</a>
